[gd_scene load_steps=10 format=3 uid="uid://bpy5i6llapd5k"]

[ext_resource type="Texture2D" uid="uid://b8t1x1hrjcrvw" path="res://imagen/fondos/fondoVan.jpg" id="1_1ci2s"]
[ext_resource type="Script" uid="uid://irmh8fofy7l7" path="res://scripts/van_persie.gd" id="2_gpfox"]
[ext_resource type="Texture2D" uid="uid://c8xxhklscjse4" path="res://imagen/assets/cabeza-removebg-preview.png" id="2_w6dl0"]
[ext_resource type="Script" uid="uid://b2ibe1nt8q0nr" path="res://scripts/spawn_pelotas.gd" id="4_4jdel"]
[ext_resource type="PackedScene" uid="uid://ciouk1j5vc66a" path="res://Escenas/pelota.tscn" id="4_gpfox"]
[ext_resource type="Texture2D" uid="uid://dy88oseuy42ca" path="res://imagen/assets/corazon.png" id="6_kapys"]
[ext_resource type="Texture2D" uid="uid://by8siern5vxps" path="res://imagen/assets/dd87ad0c-202f-49a8-82c1-d4a9b20e49c5.png" id="6_wg3ct"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jdel"]
size = Vector2(24, 637)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kapys"]
size = Vector2(126.5, 80.75)

[node name="Node2D" type="Node2D"]

[node name="fondo" type="TextureRect" parent="."]
offset_left = -1.0
offset_top = -1.0
offset_right = 1149.0
offset_bottom = 648.0
texture = ExtResource("1_1ci2s")
expand_mode = 1

[node name="final" type="StaticBody2D" parent="."]

[node name="perdiste" type="CollisionShape2D" parent="final"]
position = Vector2(2, 308.5)
shape = SubResource("RectangleShape2D_4jdel")

[node name="vanPersie" type="RigidBody2D" parent="."]
position = Vector2(294, 120)
script = ExtResource("2_gpfox")

[node name="imgVan" type="Sprite2D" parent="vanPersie"]
position = Vector2(145, 102)
rotation = 0.39619
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_w6dl0")
flip_h = true

[node name="cabeza" type="CollisionShape2D" parent="vanPersie"]
position = Vector2(124, 104)
shape = SubResource("RectangleShape2D_kapys")

[node name="muerte" type="Timer" parent="vanPersie"]

[node name="gameOver2" type="TextureRect" parent="vanPersie"]
visible = false
offset_left = 102.0
offset_top = -338.0
offset_right = 432.0
offset_bottom = -79.0
texture = ExtResource("6_wg3ct")
expand_mode = 1

[node name="spawnPelotas" type="Node2D" parent="."]
script = ExtResource("4_4jdel")

[node name="puntaje" type="Label" parent="spawnPelotas"]
offset_left = 101.0
offset_top = 37.0
offset_right = 141.0
offset_bottom = 60.0
text = "000"

[node name="pelota" parent="spawnPelotas" instance=ExtResource("4_gpfox")]
position = Vector2(1470, 84)

[node name="pelota2" parent="spawnPelotas" instance=ExtResource("4_gpfox")]
position = Vector2(1468, 341)

[node name="pelota3" parent="spawnPelotas" instance=ExtResource("4_gpfox")]
position = Vector2(1422, 212)

[node name="pelota4" parent="spawnPelotas" instance=ExtResource("4_gpfox")]
position = Vector2(1600, 90)

[node name="pelota5" parent="spawnPelotas" instance=ExtResource("4_gpfox")]
position = Vector2(1456, 490)

[node name="pelota6" parent="spawnPelotas" instance=ExtResource("4_gpfox")]
position = Vector2(1526, 250)

[node name="spawn1" type="Marker2D" parent="spawnPelotas"]
position = Vector2(1618, 237)

[node name="spawn2" type="Marker2D" parent="spawnPelotas"]
position = Vector2(1622, 376)

[node name="spawn3" type="Marker2D" parent="spawnPelotas"]
position = Vector2(1625, 510)

[node name="spawn4" type="Marker2D" parent="spawnPelotas"]
position = Vector2(1622, 89)

[node name="Timer" type="Timer" parent="spawnPelotas"]
wait_time = 3.0
autostart = true

[node name="muerte" type="Timer" parent="spawnPelotas"]

[node name="gameOver" type="TextureRect" parent="spawnPelotas"]
visible = false
offset_left = 394.0
offset_top = 225.0
offset_right = 724.0
offset_bottom = 484.0
texture = ExtResource("6_wg3ct")
expand_mode = 1

[node name="vidas" type="GridContainer" parent="spawnPelotas"]
offset_left = 810.0
offset_top = 33.0
offset_right = 1118.0
offset_bottom = 108.0
columns = 3

[node name="corazon1" type="TextureRect" parent="spawnPelotas/vidas"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
texture = ExtResource("6_kapys")
expand_mode = 1

[node name="corazon2" type="TextureRect" parent="spawnPelotas/vidas"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
texture = ExtResource("6_kapys")
expand_mode = 1

[node name="corazon3" type="TextureRect" parent="spawnPelotas/vidas"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
texture = ExtResource("6_kapys")
expand_mode = 1

[connection signal="body_entered" from="vanPersie" to="vanPersie" method="_on_body_entered"]
[connection signal="timeout" from="vanPersie/muerte" to="vanPersie" method="_on_muerte_timeout"]
[connection signal="timeout" from="spawnPelotas/Timer" to="spawnPelotas" method="_on_timer_timeout"]
[connection signal="timeout" from="spawnPelotas/muerte" to="spawnPelotas" method="_on_muerte_timeout"]
